# fastmemo-app

./: .env.sample  .gitignore  .prettierrc.json  CHANGELOG.md  CHECKLIST.md  README.md  SELF_HOSTING.md  app.config.js  app.config.ts  app.json  eas.json  eslint.config.js  metro.config.js  package.json  tsconfig.json
.github/workflows/: publish-desktop.yml  publish.yml  release.yml
app/: +not-found.jsx  +not-found.tsx  _layout.jsx  _layout.tsx  changelog.jsx  home.jsx  home.tsx  index.jsx  intro.jsx  secret-code.jsx  temporary-trash.jsx
app/categories/: change.jsx  create.jsx  organize.jsx
app/notes/: [noteId].jsx  text.jsx  todo.jsx
app/settings/: about-developer.jsx  general.jsx  help.jsx  information.jsx  report.jsx  setup-secret-code.jsx  (+2 more)
components/: CategoryIcon.jsx  CategoryIcon.tsx  LoadingSpinner.jsx  SafeAreaView.tsx  SecretPassphraseDialog.jsx  Sidebar.jsx  SyncOnProvider.jsx  VirtualNumberKeyboard.jsx
configs/: default.js  default.ts  index.js
constants/: carousel.js  icons.ts  styles.ts
contexts/: KanbanDragContext.jsx
docs/: CHANGELOG.md  CHANGELOG_DESKTOP.md  CHANGELOG_MOBILE.md  CLOUD_SYNC.md  ROADMAP.md  TAURI_SETUP.md
hooks/: useCloudSync.js  useSyncOn.js  useTimeoutTask.js
libs/: firebase.js  registry.js
scripts/: build-codemirror.mjs  tauri-sign.js
slicers/: categoriesSlice.js  notesSlice.js  settingsSlice.js  store.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
utils/: alert.js  crypt.js  date.js  date.ts  sort.js  sort.ts  string.js  string.ts  toast.js  webhook.js  webhook.ts
(+406 files in other folders)
