[package]
name = "fastmemo"
version = "0.1.0-beta"
description = "Fast Memo - Notes in one click"
authors = ["ontech7"]
license = "GNU Affero General Public License v3.0"
repository = "http://github.com/ontech7/fastmemo-app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "process-relaunch", "shell-open", "dialog-all", "fs-all", "path-all", "notification-all", "clipboard-all", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
